# gorkX

./: .gitignore  DEVELOPMENT_PLAN.md  LICENSE  README.md
apps/desktop/: DESIGN.md  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/en.lproj/: InfoPlist.strings
apps/desktop/src-tauri/resources/zh-Hans.lproj/: InfoPlist.strings
apps/desktop/src-tauri/src/: agent_bridge.rs  app_update.rs  auth.rs  capture.rs  extensions.rs  git_panel.rs  github.rs  grok_admin.rs  lib.rs  main.rs  media.rs  media_tools_config.rs  memory.rs  models_config.rs  paths.rs  pty.rs  sandbox_config.rs  scheduler.rs  store.rs  subagents_config.rs  terminal.rs  workspace.rs
docs/: CODEX_PARITY_ROADMAP.md  FEATURES.md  INDEPENDENT_APP_PLAN.md  MASTER_PLAN.md  NEXT_RELEASE_GATES.md  ROADMAP_0.4.md  VALIDATION_EVIDENCE.md  acp-mapping.md  grok-desktop-coverage.md
kernel/: grok-build.lock.toml
kernel/patches/: 0001-web-search-explicit-f32-literals.md  0001-web-search-explicit-f32-literals.patch  0002-acp-native-voice.patch  0003-acp-session-auth-source.patch  README.md  series
scripts/: build-grok-kernel.sh  doctor.sh  mac-build.sh  mac-dev.sh  mac-install.sh  sync-grok-kernel-source.sh  verify-desktop-web-build.sh  verify-grok-acp.mjs  verify-grok-kernel-build.sh  verify-grok-kernel-patches.sh  verify-grok-kernel-source.sh  verify-macos-app-bundle.sh  verify-playwright-mcp.mjs
(+76 files in other folders)
