[package]
name = "gorkx"
version = "0.4.3"
description = "gorkX — Codex-class desktop command center for Grok Build"
authors = ["gorkX contributors"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "gorkx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tokio = { version = "1", features = ["process", "io-util", "sync", "macros", "rt-multi-thread", "time"] }
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
portable-pty = "0.8"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process"] }
